k8s-idp/clusters/prod/namespaces/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: brc-team
  name: brc-team
